[package]
name = "bac_nickname"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
merge_json = { git = "https://github.com/p1k0chu/merge-json-rs.git" }
notify = "8.0.0"
reqwest = { version = "0.12.12", features = ["json"] }

[dev-dependencies]
tempdir = "0.3.7"
